--- a/twitter_sentiment_investing_strategy.ipynb
+++ b/twitter_sentiment_investing_strategy.ipynb
@@ -987,7 +987,7 @@
    "id": "bee15d22",
    "metadata": {},
    "source": [
-    "**Visualize Bench Mark**"
+    "**Visualize Benchmark**"
    ]
   },
   {
